--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Discover hidden places in the world around you </h1>
+        <a href="" class="download">Download Excursion (Comming soon!)</a>
+    </header>
+    <content>
+        <div class="video">
+            <video src="/resources/excursion.mp4" controls></video>
+        </div>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new point of interest around you.</p>
+        <img src="/resources/camp.jpeg">
+        <img class="logo" src="/resources/phone.png">    
+        <h1>Comming soon for iPhone and Android</h1>
+        <a href="" class="download">Download Excursion (Comming soon!)</a>
+    </content>
+    <footer>
+        <p class="copy"> 
+            &copy Excursion
+        </p>
+    </footer>
     
 </body>
 </html>
