--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </header>
     <content>
         <div class="video">
-            <video src="/resources/excursion.mp4" controls></video>
+            <video src="/resources/img/excursion.mp4" controls></video>
         </div>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new point of interest around you.</p>
-        <img src="/resources/camp.jpeg">
-        <img class="logo" src="/resources/phone.png">    
+        <img src="/resources/img/camp.jpeg">
+        <img class="logo" src="/resources/img/phone.png">    
         <h1>Comming soon for iPhone and Android</h1>
         <a href="" class="download">Download Excursion (Comming soon!)</a>
     </content>
