--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/resources/css/style.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="./resources/css/style.css" rel="stylesheet">
+    <title>Excursion Project</title>
 </head>
 <body>
     <header>
@@ -14,12 +14,12 @@
     </header>
     <content>
         <div class="video">
-            <video src="/resources/img/excursion.mp4" controls></video>
+            <video src="./resources/img/excursion.mp4" controls></video>
         </div>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new point of interest around you.</p>
-        <img src="/resources/img/camp.jpeg">
-        <img class="logo" src="/resources/img/phone.png">    
+        <img src="./resources/img/camp.jpeg">
+        <img class="logo" src="./resources/img/phone.png">    
         <h1>Comming soon for iPhone and Android</h1>
         <a href="" class="download">Download Excursion (Comming soon!)</a>
     </content>
