--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <content>
         <div class="video">
-            <video src="./resources/img/excursion.mp4" controls></video>
+            <video src="./resources/img/excursion.mp4" autoplay></video>
         </div>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new point of interest around you.</p>
