--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </header>
     <content>
         <div class="video">
-            <video src="./resources/img/excursion.mp4" autoplay></video>
+            <video autoplay>
+                <source src="./resources/img/excursion.mp4" type="video/mp4">
+            </video>
         </div>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new point of interest around you.</p>
