--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <content>
         <div class="video">
-            <video autoplay>
+            <video controls autoplay>
                 <source src="./resources/img/excursion.mp4" type="video/mp4">
             </video>
         </div>
