--- a/index.html
+++ b/index.html
@@ -20,16 +20,13 @@
         </div>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new point of interest around you.</p>
-        <img src="./resources/img/camp.jpeg">
-        <img class="logo" src="./resources/img/phone.png">    
+        <p><img src="./resources/img/camp.jpeg"></p>
+        <p><img class="logo" src="./resources/img/phone.png"></p>
         <h1>Comming soon for iPhone and Android</h1>
         <a href="" class="download">Download Excursion (Comming soon!)</a>
     </content>
-    <footer>
-        <p class="copy"> 
-            &copy Excursion
-        </p>
-    </footer>
-    
+    <div class="footer">
+        <p>&copy Excursion</p>
+    </div>
 </body>
 </html>
